    specific ones.
    - Create /etc/machine-id on boot if missing. (LP: #1387090)
  * Add new libmount-dev build dependency.
  * Configure with --enable-split-usr.
  * Merge some permanent Ubuntu changes, using dpkg-vendor:
    - Don't symlink udev doc directories.
    - Add epoch to gudev packages; Ubuntu packaged the standalone gudev before
      it got merged into udev.

 -- Martin Pitt <mpitt@debian.org>  Fri, 12 Dec 2014 20:32:32 +0200

systemd (217-4) experimental; urgency=medium

  [ Martin Pitt ]
  * Reinstate a debian/extra/rules/50-firmware.rules which immediately tells
    the kernel that userspace firmware loading failed. Otherwise it tries for a
    minute to call the userspace helper (if CONFIG_FW_LOADER_USER_HELPER is
    enabled) in vain, which causes long delays with devices which have a range
    of possible firmware versions. (LP: #1398458)
  * debian/systemd.postinst: Don't always restart journald, as this currently
    can't be done without losing the current journal and breaking attached
    processes. So only restart it from upgrades < 215-3 (where the socket
    location got moved) as an one-time upgrade path from wheezy.
    (Closes: #771122)
  * Revert "Modify insserv generator to mask sysvinit-only display managers".
    This is still under dispute, a bit risky, and might get a different
    implementation. Also, nodm really needs to be fixed properly, working
    around it is both too risky and also too hard to get right.

  [ Didier Roche ]
  * Add display managers autopkgtests.
  * Reset display-manager symlink to match /e/X/d-d-m even if
    display-manager.service was removed. Adapt the autopkgtests for it.
    (LP: #1400680)

 -- Martin Pitt <mpitt@debian.org>  Thu, 11 Dec 2014 18:06:54 +0200

systemd (217-3) experimental; urgency=medium

  [ Martin Pitt ]
  * systemd.bug-script: Really capture stderr of systemd-delta.
    (Closes: #771498)
  * boot-and-services autopkgtest: Give test apparmor job some time to
    actually finish.
